# watchman

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
vision-processor/: Cargo.toml  sample-config.yaml
vision-processor/src/: background_subtraction.rs  camera.rs  configuration.rs  helpers.rs  lib.rs  mailer.rs  main.rs  motion_detector.rs  recorder.rs  temporal_difference.rs
web-app/: Cargo.toml  configuration.yaml  redis.sh  sample-config.yaml
web-app/src/: authentication.rs  configuration.rs  lib.rs  main.rs  video_file.rs
web-app/src/routes/: login.rs  logout.rs  mod.rs  video.rs  videos.rs
web-app/src/routes/admin/: dashboard.rs  logout.rs  mod.rs
web-app/src/routes/home/: home.html  mod.rs
web-app/src/routes/login/: get.rs  post.rs
web-app/static/: login.html  video.html  videos.html
web-app/templates/: base.html  login.html  navbar.html  video.html  videos.html
