[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "^0.6"
serde = { version = "^1.0", features = ["derive"] }
secrecy = {version = "^0.8", features = ["serde"] }
thiserror = "1.0.30"
anyhow = "1.0.56"
urlencoding = "2"
htmlescape = "0.3"
